[LayoutNG] Need to know when establishing a new FC during min/max calculation.

When we have to lay out an object to determine its min/max inline size,
and the node establishes a new formatting context, we need to create a
constraint space that reflects this. The block size of the float needs
to be included in the block size of its container, because this block
size will be the min/max preferred inline size of the container of that
container, if the writing modes are orthogonal.

Avoid some duplicate code for creating the constraint space builder. The
second builder, the one that redoes layout with infinite available space
now gets SetFloatsBfcOffset() called, which was previously missing, but
that must have been an oversight.

This fixes the recently introduced regression with
fast/multicol/vertical-rl/column-rules.html and also another test.

Wrote a new test that tests exactly what I wanted to fix as well.

Bug: 847807
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_layout_ng
Change-Id: I7b28a0ef8061fc3089deb488ad0a78b81776295d
Reviewed-on: https://chromium-review.googlesource.com/1084989
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Aleks Totic <atotic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564438}
Former-commit-id: 846fb426f466e116be42577a56da22b22395ca7e